src/12-realdomain-tls-ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: realdomain-tls-ingress-resource
  annotations:
    # no longer required because not managed by cert-manager (too bad...)
    #cert-manager.io/cluster-issuer: letsencrypt-prod # must match the name of the issuer
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - my.real.domain
      #secretName: letsencrypt-prod  # the name of the secret
      secretName: realdomain-cert  # the name of the manually imported secret
  rules:
    - host: my.real.domain
      http:
        paths:
          - backend:
              serviceName: realdomain-nginx  # name of the service created above
              servicePort: 80
